--- a/notebooks/build-openai.ipynb
+++ b/notebooks/build-openai.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +54,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>column_id</th>\n",
        "      <th>measure</th>\n",
        "      <th>restriction</th>\n",
@@ -66,6 +68,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>B19037E_015</td>\n",
        "      <td>Age Of Householder By Household Income In The ...</td>\n",
        "      <td>both sexes, Native Hawaiian, ages 0 to 25</td>\n",
@@ -76,6 +80,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>B26209_057</td>\n",
        "      <td>Group Quarters Type (5 Types) By Geographical ...</td>\n",
        "      <td>both sexes who are in noninstitutionalized gro...</td>\n",
@@ -86,6 +92,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>B19037E_016</td>\n",
        "      <td>Age Of Householder By Household Income In The ...</td>\n",
        "      <td>both sexes, Native Hawaiian, ages 0 to 25</td>\n",
@@ -96,6 +104,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>B26209_058</td>\n",
        "      <td>Group Quarters Type (5 Types) By Geographical ...</td>\n",
        "      <td>all population who are living in college/unive...</td>\n",
@@ -106,6 +116,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>B26209_059</td>\n",
        "      <td>Group Quarters Type (5 Types) By Geographical ...</td>\n",
        "      <td>both sexes who are living in college/universit...</td>\n",
@@ -119,12 +131,19 @@
        "</div>"
       ],
       "text/plain": [
-       "     column_id                                            measure  \\\n",
-       "0  B19037E_015  Age Of Householder By Household Income In The ...   \n",
-       "1   B26209_057  Group Quarters Type (5 Types) By Geographical ...   \n",
-       "2  B19037E_016  Age Of Householder By Household Income In The ...   \n",
-       "3   B26209_058  Group Quarters Type (5 Types) By Geographical ...   \n",
-       "4   B26209_059  Group Quarters Type (5 Types) By Geographical ...   \n",
+       "   Unnamed: 0.1  Unnamed: 0    column_id  \\\n",
+       "0             0           0  B19037E_015   \n",
+       "1             1           1   B26209_057   \n",
+       "2             2           2  B19037E_016   \n",
+       "3             3           3   B26209_058   \n",
+       "4             4           4   B26209_059   \n",
+       "\n",
+       "                                             measure  \\\n",
+       "0  Age Of Householder By Household Income In The ...   \n",
+       "1  Group Quarters Type (5 Types) By Geographical ...   \n",
+       "2  Age Of Householder By Household Income In The ...   \n",
+       "3  Group Quarters Type (5 Types) By Geographical ...   \n",
+       "4  Group Quarters Type (5 Types) By Geographical ...   \n",
        "\n",
        "                                         restriction    description  \\\n",
        "0          both sexes, Native Hawaiian, ages 0 to 25  <description>   \n",
@@ -148,17 +167,32 @@
        "4  What percentage of college/university student ...  "
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "Stop right there!",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m Stop right there!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eric/opt/miniconda3/envs/data/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3441: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
     }
    ],
    "source": [
     "# Just load the compressed data and exit, because we don't want to re-run the OpenAI process. \n",
     "df = pd.read_csv('../data/questions.csv.gz', compression='gzip')\n",
-    "cols = [ c for c in df.columns if 'Unnamed' not in c ]\n",
-    "df = df[cols]\n",
-    "df.head()\n"
+    "display(df.head())\n",
+    "raise SystemExit(\"Stop!\")"
    ]
   },
   {
@@ -166,7 +200,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pkg = mp.jupyter.open_package()\n",
+    "#pkg = mp.jupyter.open_source_package()\n",
+    "pkg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Todo, move this into the metadata. \n",
+    "pkg = mp.open_package('index:civicknowledge.com-census_meta-2020e5')\n",
+    "paths = pkg.resource('paths').dataframe()\n",
+    "mdf = pkg.resource('metadata').dataframe()\n",
+    "mdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with shelve.open('census_questions') as db:\n",
+    "    print(len(db), 'existing records')\n",
+    "    print(len(mdf),'column records')\n",
+    "    tasks = questions_tasks(mdf)\n",
+    "\n",
+    "    print(len(tasks),' original tasks')\n",
+    "\n",
+    "    tasks = [t for t in tasks if t['column_id'] not in db ]\n",
+    "    \n",
+    "print(len(tasks),' filtered tasks')\n",
+    "\n",
+    "shuffle(tasks)\n",
+    "\n",
+    "batches = list(chunked(tasks, 5))\n",
+    "\n",
+    "print(len(batches), 'batches')\n",
+    "\n",
+    "print(json.dumps(batches[0], indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_batch(batch):\n",
+    "    \n",
+    "    response = write_question(batch)\n",
+    "    \n",
+    "    tokens_used.append(response['usage']['total_tokens'])\n",
+    "\n",
+    "    with shelve.open('census_questions') as db:\n",
+    "        store_question_responses(task, response, db)\n",
+    "\n",
+    "\n",
+    "from openai.error import ServiceUnavailableError\n",
+    "from time import sleep\n",
+    "\n",
+    "failures_count = 0\n",
+    "\n",
+    "shuffle(tasks)\n",
+    "\n",
+    "for task_n, task in enumerate(tqdm(tasks)):\n",
+    "    while True:\n",
+    "        \n",
+    "        if failures_count > 4:\n",
+    "            raise Exception(\"Too many failures\")\n",
+    "          \n",
+    "        failures_count += 1;\n",
+    "        \n",
+    "        try:\n",
+    "            run_batch(task)\n",
+    "            failures_count = 0\n",
+    "            break\n",
+    "        except ServiceUnavailableError as e:       \n",
+    "            print(e)\n",
+    "            sleep(45)\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"Batch {task_n} Failed: \", e)\n",
+    "            if failures_count == 3:\n",
+    "                raise\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
